[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/npc/neutral/critter/mouse_1.png" type="Texture" id=1]
[ext_resource path="res://npc/neutral/critter/Mouse.gd" type="Script" id=2]
[ext_resource path="res://npc/states/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://npc/neutral/critter/Idle.gd" type="Script" id=4]
[ext_resource path="res://npc/neutral/critter/CritterStateMachine.gd" type="Script" id=5]
[ext_resource path="res://npc/neutral/critter/Wander.gd" type="Script" id=6]
[ext_resource path="res://npc/enemy/PlayerDetectionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://npc/neutral/critter/Flee.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle_E"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle_N"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle_NE"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle_NW"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle_S"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle_SE"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle_SW"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle_W"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Run_E"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Run_N"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Run_NE"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Run_NW"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Run_S"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Run_SE"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Run_SW"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Run_W"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Idle_W"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Idle_S"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Idle_W"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Idle_N"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Idle_NW"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Idle_NE"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Idle_SE"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Idle_SW"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( 0, -1.1 )
blend_point_4/node = SubResource( 24 )
blend_point_4/pos = Vector2( -1.1, -1.1 )
blend_point_5/node = SubResource( 25 )
blend_point_5/pos = Vector2( 1.1, -1.1 )
blend_point_6/node = SubResource( 26 )
blend_point_6/pos = Vector2( 1.1, 1.1 )
blend_point_7/node = SubResource( 27 )
blend_point_7/pos = Vector2( -1.1, 1.1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Run_W"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Run_E"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "Run_S"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Run_N"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "Run_NW"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "Run_NE"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "Run_SE"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "Run_SW"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 1.1, 0 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, -1.1 )
blend_point_4/node = SubResource( 36 )
blend_point_4/pos = Vector2( -1.1, -1.1 )
blend_point_5/node = SubResource( 37 )
blend_point_5/pos = Vector2( 1.1, -1.1 )
blend_point_6/node = SubResource( 38 )
blend_point_6/pos = Vector2( 1.1, 1.1 )
blend_point_7/node = SubResource( 39 )
blend_point_7/pos = Vector2( -1.1, 1.1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachine" id=18]
states/Idle/node = SubResource( 28 )
states/Idle/position = Vector2( 473, 65 )
states/Run/node = SubResource( 29 )
states/Run/position = Vector2( 257, 65 )
transitions = [ "Idle", "Run", SubResource( 30 ), "Run", "Idle", SubResource( 31 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="CapsuleShape2D" id=40]
radius = 2.0
height = 1.99999

[sub_resource type="CircleShape2D" id=41]
radius = 58.6941

[sub_resource type="CircleShape2D" id=45]
radius = 132.197

[node name="Mouse" type="KinematicBody2D"]
collision_layer = 48
script = ExtResource( 2 )
ACCELERATION = 360
MAX_SPEED = 80
WANDER_TARGET_RANGE = 400

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle_E = SubResource( 1 )
anims/Idle_N = SubResource( 2 )
anims/Idle_NE = SubResource( 3 )
anims/Idle_NW = SubResource( 4 )
anims/Idle_S = SubResource( 5 )
anims/Idle_SE = SubResource( 6 )
anims/Idle_SW = SubResource( 7 )
anims/Idle_W = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/Run_E = SubResource( 10 )
anims/Run_N = SubResource( 11 )
anims/Run_NE = SubResource( 12 )
anims/Run_NW = SubResource( 13 )
anims/Run_S = SubResource( 14 )
anims/Run_SE = SubResource( 15 )
anims/Run_SW = SubResource( 16 )
anims/Run_W = SubResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 19 )
parameters/Idle/blend_position = Vector2( 0, -0.00635839 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]
wander_range = 500

[node name="States" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Wander" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Flee" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 40 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false
shape = SubResource( 41 )

[node name="HomeDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="HomeDetectionZone"]
visible = false
shape = SubResource( 45 )

[node name="FleeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="area_entered" from="HomeDetectionZone" to="." method="_on_HomeDetectionZone_area_entered"]
[connection signal="body_entered" from="HomeDetectionZone" to="." method="_on_HomeDetectionZone_body_entered"]

[editable path="PlayerDetectionZone"]
